--- a/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
+++ b/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
@@ -1,3 +1,13 @@
+<div class="fullwidth" ng-show="vm.loading" style="position: absolute;top: 0; left: 0; width: 100%; height: 100%; background: #00000094; z-index: 9">
+  
+</div>
+
+<div class="loader-inner ball-pulse" ng-show="vm.loading" style="position: fixed; top: 50%; z-index: 10; left: 48%;">
+          <div style="background: #5ad8b0f5"></div>
+          <div style="background: #5ad8b0f5"></div>
+          <div style="background: #5ad8b0f5"></div>
+</div>
+
 <section>
   <div class="page-header">
     <h1>Registrar consumos</h1>
