--- a/modules/supplies/client/views/list-supplies.client.view.html
+++ b/modules/supplies/client/views/list-supplies.client.view.html
@@ -1,6 +1,6 @@
 <section>
   <div class="page-header">
-    <h1>Supplies</h1>
+    <h1>Suministros</h1>
   </div>
   <div class="list-group">
     <a ng-repeat="supplie in vm.supplies" ui-sref="supplies.view({ supplieId: supplie._id })" class="list-group-item">
