--- a/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
+++ b/modules/service_consumptions/client/views/admin/form-service_consumption.client.view.html
@@ -138,4 +138,8 @@
     </div>
     <button class="btn btn-success" ng-click="vm.registerServices();">Registrar</button>
   </div>
+
+  <table class="table">
+    
+  </table>
 </section>
