--- a/modules/supplies/client/views/admin/list-supplies.client.view.html
+++ b/modules/supplies/client/views/admin/list-supplies.client.view.html
@@ -1,7 +1,7 @@
 ﻿<section>
   <div class="page-header">
     <h1>
-      Supplies
+      Suministros
       <a class="btn btn-primary pull-right" data-ui-sref="admin.supplies.create">
         <i class="glyphicon glyphicon-plus"></i>
       </a>
