--- a/modules/core/client/views/dashboard/dashboard.client.view.html
+++ b/modules/core/client/views/dashboard/dashboard.client.view.html
@@ -45,6 +45,26 @@
     </div>
   </div>
 </section> 	
+<hr>
+<div class="col-md-4">
+  <table class="table">
+    <thead>
+      <th>Item </th>
+      <th>Descrip.</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Cantidad de departamentos activos</td>
+        <td>{{ vm.qty }}</td>
+      </tr>
+      <tr>
+        <td>Torres activas</td>
+        <td></td>
+      </tr>      
+    </tbody>
+  </table>  
+</div>
+
 
 <div id="Boleta" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
