--- a/modules/towers/client/views/admin/form-tower.client.view.html
+++ b/modules/towers/client/views/admin/form-tower.client.view.html
@@ -79,12 +79,16 @@
               <th>Servicio</th>
               <th>N° Suministro</th>
               <th>Descripción</th>
+              <th>Activo?</th>
             </thead>
             <tbody>
               <tr ng-repeat="item in vm.registered">
                 <td>{{ item.serviceName }}</td>
                 <td>{{ item.supplyCode }}</td>
                 <td>{{ item.supplyDescription }}</td>
+                <td>
+                  <toggle ng-model="item.active" onstyle="btn-success" offstyle="btn-danger" on="Si" off="No"></toggle>
+                </td>
               </tr>
             </tbody>
           </table>
