--- a/modules/towers/client/views/admin/form-tower.client.view.html
+++ b/modules/towers/client/views/admin/form-tower.client.view.html
@@ -87,7 +87,7 @@
                 <td>{{ item.supplyCode }}</td>
                 <td>{{ item.supplyDescription }}</td>
                 <td>
-                  <toggle ng-model="item.active" onstyle="btn-success" offstyle="btn-danger" on="Si" off="No"></toggle>
+                  <toggle ng-model="item.active" ng-change="vm.changeSupplyStatus(item)" onstyle="btn-success" offstyle="btn-danger" on="Si" off="No"></toggle>
                 </td>
               </tr>
             </tbody>
