--- a/modules/core/client/views/dashboard/condominium-service.client.view.html
+++ b/modules/core/client/views/dashboard/condominium-service.client.view.html
@@ -28,6 +28,27 @@
     <div class="alert alert-info" ng-show="vm.nosupply" style="color: #36b7e3">
       <strong>Información!</strong> No hay suministros por registrar.
     </div>
+    <h2 ng-show="vm.registered.length > 0">Servicios registrados</h2>
+
+    <table class="table table-responsive">
+      <thead>
+        <th>Servicio</th>
+        <th>N° Suministro</th>
+        <th>Descripción</th>
+        <th>Activo?</th>        
+      </thead>
+      <tbody>
+        <tr ng-repeat="item in vm.registered">
+          <td>{{ item.serviceName }}</td>
+          <td>{{ item.supplyCode }}</td>
+          <td>{{ item.supplyDescripcion }}</td>
+          <td>
+            <toggle ng-model="item.active" ng-change="vm.changeSupplyStatus(item)" onstyle="btn-success" offstyle="btn-danger" on="Si" off="No"></toggle>
+          </td>
+        </tr>
+      </tbody>
+
+    </table>
 </section> 	
 
 
