--- a/modules/core/client/views/dashboard/condominium-service.client.view.html
+++ b/modules/core/client/views/dashboard/condominium-service.client.view.html
@@ -35,7 +35,8 @@
         <th>Servicio</th>
         <th>N° Suministro</th>
         <th>Descripción</th>
-        <th>Activo?</th>        
+        <th>Activo?</th>
+        <th>Acciones</th>      
       </thead>
       <tbody>
         <tr ng-repeat="item in vm.registered">
@@ -44,6 +45,11 @@
           <td>{{ item.supplyDescripcion }}</td>
           <td>
             <toggle ng-model="item.active" ng-change="vm.changeSupplyStatus(item)" onstyle="btn-success" offstyle="btn-danger" on="Si" off="No"></toggle>
+          </td>
+          <td>
+            <a href="#">
+              <i class="fa fa-trash-o fa-2x" aria-hidden="true" ng-click="vm.deleteSupply(item)"></i>
+            </a>
           </td>
         </tr>
       </tbody>
