--- a/modules/core/client/views/dashboard/dashboard.client.view.html
+++ b/modules/core/client/views/dashboard/dashboard.client.view.html
@@ -25,8 +25,18 @@
     <div class="col-sm-6 col-md-3">
       <p><a ui-sref="payment-register" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
       REGISTRO DE PAGOS / BOLETAS
-    </div>    
+    </div> 
+    <div class="col-sm-6 col-md-3">
+      <p>
+        <a ui-sref="aqua-service">
+          <i class="fa fa-tint fa-5x" aria-hidden="true"></i>
+        </a>
+      </p>
+      SERVICIO DE AGUA
+    </div>
+   
   </div>
+
 
   <div class="alert alert-danger" role="alert" ng-show="vm.contract" style="color: #af4342">
     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
