--- a/modules/core/client/views/dashboard/dashboard.client.view.html
+++ b/modules/core/client/views/dashboard/dashboard.client.view.html
@@ -5,23 +5,20 @@
   <div class="col-md-12 text-center">
     <div class="col-sm-6 col-md-3">
       <p><a ui-sref="condominium-service" ><i class="fa fa-plus-square fa-5x" aria-hidden="true"></i></a></p>
-      REGISTRO DE SUMINISTROS DE CONDOMINIO
+      SUMINISTROS DE CONDOMINIO
     </div>
     <div class="col-sm-6 col-md-3">
-      <p><a ui-sref="payment-monthly" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
+      <p><a ui-sref="payment-monthly" ><i class="fa fa-cc-visa fa-5x" aria-hidden="true"></i></a></p>
       PAGO RÁPIDO 
     </div>
     <div class="col-sm-6 col-md-3">
-      <p><a ui-sref="#" ><i class="fa fa-users fa-5x" aria-hidden="true"></i></a></p>
-      MIS CLIENTES
+      <p>
+        <a ui-sref="condominium-config">
+          <i class="fa fa-cog fa-5x" aria-hidden="true"></i>
+        </a>
+      </p>
+      CONFIGURACIÓN
     </div>
-    <div class="col-sm-6 col-md-3">
-      <p><a ui-sref="#" ><i class="fa fa-archive fa-5x" aria-hidden="true"></i></a></p>
-      LISTA DE CONTRATOS
-    </div>
-
-  </div>
-  <div class="row text-center">
     <div class="col-sm-6 col-md-3">
       <p><a ui-sref="payment-register" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
       REGISTRO DE PAGOS / BOLETAS
@@ -34,7 +31,14 @@
       </p>
       SERVICIO DE AGUA
     </div>
-   
+    <div class="col-sm-6 col-md-3">
+      <p><a ui-sref="#" ><i class="fa fa-archive fa-5x" aria-hidden="true"></i></a></p>
+      LISTA DE CONTRATOS
+    </div>
+    <div class="col-sm-6 col-md-3">
+      <p><a ui-sref="#" ><i class="fa fa-users fa-5x" aria-hidden="true"></i></a></p>
+      MIS CLIENTES
+    </div> 
   </div>
 
 
@@ -54,7 +58,9 @@
  		</div>
     </div>
   </div>
-</section> 	
+</section> 
+<br/>
+<br/>	
 <hr>
 <div class="col-md-4">
   <table class="table">
