--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -31,6 +31,10 @@
     color: #fff !important;
   }
 
+.panel-default>.panel-heading {
+    background: #000000c9 !important;
+}
+
   @media screen {
     #printSection {
         display: none;
