--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -174,11 +174,11 @@
             </tr>
             <tr>
               <th colspan="2">CUENTA ABONAR:</th>
-              <td colspan="2">555 77 855</td>
+              <td colspan="2">{{ vm.condominiumDetails.account_number }}</td>
             </tr>
             <tr>
               <th colspan="2">WEBSITE:</th>
-              <td colspan="2">http://www.vecinoinformado.com</td>
+              <td colspan="2">{{ vm.condominiumDetails.website }}</td>
             </tr>        
           </table>          
         </div>
