--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -18,7 +18,8 @@
       padding: 16px 20px;
       background: none;
       color: #656C78;
-      font-size: 13px;
+      font-size: 15px;
+      text-transform: capitalize;
   }
 
   .detail-pay {
@@ -51,6 +52,8 @@
       zoom: 100%;
       visibility:visible;
       font-family: Californian;
+      text-transform: capitalize;
+      font-size: 18px;
     }
 
     #printSection {
@@ -147,24 +150,29 @@
               RECIBO MENSUAL - DEPARTAMENTO {{ vm.information.department.code }} - Status: {{ vm.header.status }}
         </h4>
       </div>
-      <div class="modal-body" id="printable">
+      <div class="modal-body" id="printable" style="font-size: 18px;">
         <div class="row">
-          <div class="col-xs-12 visible-xs text-center">
-            <div class="col-xs-6">
+          <div class="col-xs-12 visible-xs text-center" style="margin-bottom: 20px;">
+<!--             <div class="col-xs-6">
               <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/innovecrt.png" alt="100px">
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-6"> -->
+            <div class="col-xs-12">
               <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/ciudadnueva.png" alt="" width="100px;">
             </div>
           </div>
           <div class="col-sm-3 hidden-xs">
-            <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/innovecrt.png" alt="">
+            <!-- <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/innovecrt.png" alt=""> -->
           </div>
         <div class="col-sm-6">
           <table class="table table-responsive boleta individualpayment">
             <tr>
               <th colspan="2">PROPIETARIO:</th>
               <td colspan="2">{{ vm.fullUser.displayName }}</td>
+            </tr>
+            <tr>
+              <th colspan="2">DEPARTAMENTO: </th>
+              <td colspan="2">{{ vm.information.department.code }}</td>
             </tr>
             <tr>
               <th>CUOTA MES:</th>
