--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -53,7 +53,7 @@
       visibility:visible;
       font-family: Californian;
       text-transform: capitalize;
-      font-size: 18px;
+      font-size: 16px;
     }
 
     #printSection {
@@ -158,8 +158,8 @@
             </div>
             <div class="col-xs-6"> -->
             <div class="col-xs-3" >
-              <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/ciudadnueva.png" alt="" width="100px;">
-            </div>
+<!--               <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/ciudadnueva.png" alt="" width="100px;">
+ -->            </div>
           </div>
           <div class="col-sm-3 hidden-xs">
             <!-- <img src="https://s3-us-west-2.amazonaws.com/condominiociudadnueva/innovecrt.png" alt=""> -->
