--- a/modules/core/client/views/dashboard/payment-register.client.view.html
+++ b/modules/core/client/views/dashboard/payment-register.client.view.html
@@ -8,6 +8,9 @@
   body {
     font-family: Californian;
   }
+  .table {
+    margin-bottom: 0px;
+  }
 
   .individualpayment>tbody>tr>td, .individualpayment>tbody>tr>th, .individualpayment>tfoot>tr>td, .individualpayment>tfoot>tr>th, .individualpayment>thead>tr>td, .individualpayment>thead>tr>th {
     padding: 3px !important;
