--- a/modules/core/client/views/dashboard/dashboard.client.view.html
+++ b/modules/core/client/views/dashboard/dashboard.client.view.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-sm-6 col-md-3">
       <p><a ui-sref="payment-monthly" ><i class="fa fa-cc-visa fa-5x" aria-hidden="true"></i></a></p>
-      PAGO RÁPIDO 
+      PAGO
     </div>
     <div class="col-sm-6 col-md-3">
       <p>
@@ -21,7 +21,7 @@
     </div>
     <div class="col-sm-6 col-md-3">
       <p><a ui-sref="payment-register" ><i class="fa fa-money fa-5x" aria-hidden="true"></i></a></p>
-      REGISTRO DE PAGOS / BOLETAS
+      BOLETAS / DESCUENTOS / MULTAS
     </div> 
     <div class="col-sm-6 col-md-3">
       <p>
@@ -31,14 +31,15 @@
       </p>
       SERVICIO DE AGUA
     </div>
-    <div class="col-sm-6 col-md-3">
-      <p><a ui-sref="#" ><i class="fa fa-archive fa-5x" aria-hidden="true"></i></a></p>
-      LISTA DE CONTRATOS
-    </div>
-    <div class="col-sm-6 col-md-3">
-      <p><a ui-sref="#" ><i class="fa fa-users fa-5x" aria-hidden="true"></i></a></p>
+<!--     <div class="col-sm-6 col-md-3">
+
+      <p><a ui-sref="service-aditional" ><i class="fa fa-usd fa-5x"></i></a></p>
+      DESCUENTOS / MULTAS
+    </div> -->
+<!--     <div class="col-sm-6 col-md-3">
+      <p><a ui-sref="service-aditional" ><i class="fa fa-users fa-5x" aria-hidden="true"></i></a></p>
       MIS CLIENTES
-    </div> 
+    </div>  -->
   </div>
 
 
